# TutorFlow

./: .gitignore  DesignDoc.md  PLANNING.md  README.md  TASKS.md
.cursor/rules/: ai-behavior-rules.mdc  code-structure-modularity.mdc  documentation-explainability.mdc  project-awareness-context.mdc  style-convention.mdc  task-completion.mdc  testing-reliability.mdc
backend/: README.md  alembic.ini  create_admin.py  docker-compose.yml  env.example  pyproject.toml  seed_data.py  test_admin_creation.py
backend/alembic/: env.py
backend/alembic/versions/: 02ce3a95022b_add_fk_from_tutor_user_id_to_user_id.py  0d79cb62ceae_initial_migration.py  43648bd833d9_update_bookings_to_use_uuid_foreign_keys.py
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  bookings.py  users.py
backend/app/core/: __init__.py  auth.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: __init__.py  auth.py  booking.py  user.py
backend/app/services/: __init__.py  booking_service.py
backend/app/utils/: __init__.py  validators.py
backend/tests/: __init__.py  conftest.py  test_auth.py
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/sessions/: page.tsx
frontend/src/app/admin/tutors/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/bookings/: page.tsx
frontend/src/app/dashboard/tutor/: page.tsx
frontend/src/app/dashboard/tutor/availability/: page.tsx
frontend/src/app/dashboard/tutor/sessions/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/tutors/: page.tsx
frontend/src/app/tutors/[id]/: page.tsx
frontend/src/components/auth/: login-form.tsx  protected-route.tsx  register-form.tsx
frontend/src/components/bookings/: booking-form.tsx  session-list.tsx
frontend/src/components/layout/: navigation.tsx
frontend/src/components/tutors/: tutor-availability-form.tsx  tutor-card.tsx  tutor-profile-form.tsx
frontend/src/components/ui/: calendar.tsx
frontend/src/contexts/: auth-context.tsx
frontend/src/lib/: api.ts  validations.ts
frontend/src/types/: auth.ts  tutor.ts
